--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "expo": "~44.0.0",
+    "expo-camera": "~12.1.2",
+    "expo-face-detector": "~11.1.3",
+    "expo-media-library": "~14.0.0",
+    "expo-screen-capture": "^4.1.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
